[package]
name = "atlas-idl-schema"
description="A Rust library for transforming Solana program JSON IDL files into native Rust objects, providing tools to parse and decode program account data into human-readable JSON"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xdeepmehta/reverse-idl-parser"

[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
borsh = { version = "0.10.4" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
solana-program = "2.1.4"

[dev-dependencies]
solana-client = "2"
solana-sdk = "2"
